se agrego comentario

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="ome"></div>
         <!-- TITULO PRINCIPAL -->
         <h1>OM Indumentaria</h1>
-        
+        <!-- navegador -->
         <nav>
             <ul>
                 <li>
